--- a/Projeto Unit 1,2,3 e 4.html
+++ b/Projeto Unit 1,2,3 e 4.html
@@ -7,46 +7,72 @@
         <link rel="stylesheet" href="projeto.css">
 </head>
 <body class="fonte">
-    <h1 class="textoCentralizado">THE ELDER SCROLLS</h1>
-    <p class="textoCentralizado">
-        <a href="index.html" class="limpo">INÍCIO |</a>
-        <a href="História.html" class="limpo">HISTÓRIA |</a>
-        <a href="Personagens.html" class="limpo">PERSONAGENS |</a>
-        <a href="#Spinoffs" class="limpo">SPIN-OFFS |</a>
-        <a href="Contato.html" class="limpo">CONTATO</a>
-    </p>
-    <p class="textoCentralizado">CAPA DO PRIMEIRO JOGO DA FRANQUIA</p>
-    <img src="assets/Arena.jpg" alt="Capa do jogo ESOI:Arena" class="imagemCentralizada" />
+    <div class="fundoCabeçalho">
+        <h1 class="textoCentralizado">THE ELDER SCROLLS</h1>
+        <p class="textoCentralizado">
+            <a href="index.html" class="limpo">INÍCIO |</a>
+            <a href="História.html" class="limpo">HISTÓRIA |</a>
+            <a href="Personagens.html" class="limpo">PERSONAGENS |</a>
+            <a href="#Spinoffs" class="limpo">SPIN-OFFS |</a>
+            <a href="Contato.html" class="limpo">CONTATO</a>
+        </p>
+    </div>
+    <h2 class="textoCentralizado">MAPA DE TAMRIEL</h2>
+        <div>
+            <img src="assets/mapaTamriel.jpg" alt="Mapa de Tamriel" class="imagemCentralizadaGrande bordaPreta">
+        </div>
+    <h2 class="textoCentralizado">JOGOS DA FRANQUIA</h2>
     <h3 class="textoCentralizado">ARENA</h3>
+        <div class="containerImagemLink">
+            <a class="imagemLink" href="https://store.steampowered.com/app/1812290/The_Elder_Scrolls_Arena/" alt="Link para o jogo Arena na Steam">
+                <img src="assets/Arena.jpg" alt="Capa do jogo ESOI:Arena" class="imagemCentralizada bordaPrata" />
+            </a>
+        </div>
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget tortor nec massa accumsan ullamcorper.
         Ut imperdiet massa eget ex pellentesque suscipit. Praesent id mauris at purus tristique commodo.
         Praesent eget venenatis turpis. Aenean quis porta risus. Suspendisse tincidunt consequat velit eu auctor.
         Nunc congue arcu id turpis suscipit, a tinci lectus pretium.
     </p>
-    <h4 class="textoCentralizado">OUTROS JOGOS DA FRANQUIA</h4>
+    <h2 class="textoCentralizado">OUTROS JOGOS DA FRANQUIA</h2>
     <h3 class="textoCentralizado">DAGGERFALL</h3>
-    <img src="assets/Daggerfall.jpg" alt="Capa do jogo ESOII:Daggerfall" class="imagemCentralizada" />
+        <div class="containerImagemLink">
+            <a class="imagemLink" href="https://store.steampowered.com/app/1812390/The_Elder_Scrolls_II_Daggerfall/" alt="Link para o jogo Daggerfall na Steam">
+                <img src="assets/Daggerfall.jpg" alt="Capa do jogo ESOII:Daggerfall" class="imagemCentralizada bordaDourada" />
+            </a>
+        </div>
     <p> Aenean quis tempor quam. Sed pharetra lacus. Vivamus nec leo et quam viverra tempor.
         Etiam ornare ipsum commodo imperdiet varius. Nullam sed leo ac enim molestie finibus.
         Proin congue luctus ex convallis tristique. Nullam justo arcu, sagittis nec massa ut, tempor volutpat erat.
         In tempus laoreet libero at ultricies. Ut id leo ligula.
     </p>
     <h3 class="textoCentralizado">MORROWIND</h3>
-    <img src="assets/Morrowind.jpg" alt="Capa do jogo ESOIII:Morrowind" class="imagemCentralizada" />
+        <div class="containerImagemLink">
+            <a class="imagemLink" href="https://store.steampowered.com/app/22320/The_Elder_Scrolls_III_Morrowind_Game_of_the_Year_Edition/" alt="Link para o jogo Daggerall na Steam">
+                <img src="assets/Morrowind.jpg" alt="Capa do jogo ESOIII:Morrowind" class="imagemCentralizada bordaPrata" />
+            </a>
+        </div>
     <p> Nullam nulla diam, consequat quis risus vel, aliquam pretium ex. Morbi a vehicula sem. In vitae rutrum eros.
         Suspendisse potenti. Nulla eget tortor convallis, commodo tellus ac, vehicula neque. Suspendisse potenti.
         Aliquam eleifend, augue vitae molestie interdum, urna libero vestibulum ante, non pharetra libero nunc sed
         sapien.
     </p>
     <h3 class="textoCentralizado">OBLIVION</h3>
-    <img src="assets/Oblivion.jpg" alt="Capa do jogo ESOIV:Oblivion" class="imagemCentralizada" />
+        <div class="containerImagemLink">
+            <a class="imagemLink" href="https://store.steampowered.com/app/22330/The_Elder_Scrolls_IV_Oblivion_Game_of_the_Year_Edition/" alt="Link para o jogo Oblivion na Steam">    
+                <img src="assets/Oblivion.jpg" alt="Capa do jogo ESOIV:Oblivion" class="imagemCentralizada bordaDourada" />
+            </a>
+        </div>
     <p> Nam ipsum justo, mattis et est quis, pharetra convallis lectus. Morbi fringilla velit eu ligula iaculis varius.
         Aliquam nec eros eu nulla finibus vestibulum eu ac sapien. Aenean hendrerit turpis ut pulvinar efficitur.
         Nulla non tortor nisi. Nunc sed ultricies odio. Curabitur orci eros, egestas sed lorem nec, rhoncus tincidunt
         diam.
     </p>
     <h3 class="textoCentralizado">SKYRIM</h3>
-    <img src="assets/Skyrim.jpg" alt="Capa do jogo ESOV:Skyrim" class="imagemCentralizada" />
+        <div class="containerImagemLink">
+            <a class="imagemLink" href="https://store.steampowered.com/app/489830/The_Elder_Scrolls_V_Skyrim_Special_Edition/" alt="Link para o jogo Skyrim na Steam">
+                <img src="assets/Skyrim.jpg" alt="Capa do jogo ESOV:Skyrim" class="imagemCentralizada bordaPrata"  />
+            </a>
+        </div>
     <p> Ut tincidunt tempus justo, vel ultricies odio placerat id. In hac habitasse platea dictumst.
         Phasellus eu leo vitae metus gravida lacinia. Cras ultricies nec diam ut tempor. Ut vel erat enim.
         Nullam gravida, nisl ultricies luctus interdum, magna tortor mattis velit, vel placerat purus risus in lorem.
